--- a/etc/zebradb/ccl.properties
+++ b/etc/zebradb/ccl.properties
@@ -591,6 +591,9 @@ notes Note
 Record-control-number 1=1045
 rcn Record-control-number
 
+Control-number-identifier 1=9013
+cni Control-number-identifier
+
 #Record-source        1019  The USMARC code or name of the  008/39, 040
 #                           organization(s) that created
 #                           the original record, assigned
