Bug 13799: 1. RESTful API with Mojolicious and Swagger2
Actual routes are:
  /borrowers
    Return a list of all borrowers in Koha

  /borrowers/{borrowernumber}
    Return the borrower identified by {borrowernumber}
    (eg. /borrowers/1)

There is a test file you can run with:
  $ prove t/db_dependent/rest/borrowers.t

All API stuff is in /api/v1 (except Perl modules)
So we have:
  /api/v1/script.cgi     CGI script
  /api/v1/swagger.json   Swagger specification

Add a virtual host in Apache configuration api.HOSTNAME
So we have:
  http://api.HOSTNAME/v1/swagger.json   Swagger specification
  http://api.HOSTNAME/v1/{path}         API endpoint

Add 'unblessed' subroutines to both Koha::Objects and Koha::Object to be
able to pass it to Mojolicious

Test plan:
  1/ Install Perl modules Mojolicious and Swagger2
  2/ perl Makefile.PL
  3/ make && make install
  4/ Change etc/koha-httpd.conf and copy it to the right place if needed
  5/ Reload Apache
  6/ Check that http://api.HOSTNAME/v1/borrowers and
     http://api.HOSTNAME/v1/borrowers/{borrowernumber} works

Optionally, you could verify that http://api.HOSTNAME/vX/borrowers
(where X is an integer greater than 1) returns a 404 error

For the new vhost to work, you may need to modify your /etc/hosts file
if you run Koha locally.

--- a/etc/koha-httpd.conf
+++ b/etc/koha-httpd.conf
@@ -216,3 +216,22 @@
      RewriteRule ^/issn/([^\/]*)/?$ /search?q=issn:$1 [PT]
    </IfModule>
 </VirtualHost>
+
+<VirtualHost __WEBSERVER_IP__:__WEBSERVER_PORT__>
+   ServerAdmin __WEBMASTER_EMAIL__
+   DocumentRoot __INTRANET_CGI_DIR__/api
+   ServerName api.__WEBSERVER_HOST__:__WEBSERVER_PORT__
+   SetEnv KOHA_CONF "__KOHA_CONF_DIR__/koha-conf.xml"
+   SetEnv PERL5LIB "__PERL_MODULE_DIR__"
+
+  <Directory __INTRANET_CGI_DIR__/api>
+    Options +ExecCGI +FollowSymlinks
+    AddHandler cgi-script .cgi
+
+    RewriteEngine on
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{DOCUMENT_ROOT}/$1/script.cgi -f
+    RewriteRule ^(.*?)/.* $1/script.cgi/$0 [L]
+  </Directory>
+</VirtualHost>
