--- a/etc/zebradb/ccl.properties
+++ b/etc/zebradb/ccl.properties
@@ -370,6 +370,9 @@ Dissertation-information 1=1056
 EAN 1=1214
 ean EAN
 
+#Edition Statement
+Edition 1=1223
+
 #Identifier--         1013  Used in full-text searching
 #authority/format           to indicate to the target
 #                           system the format of the
