--- a/etc/koha-httpd.conf
+++ b/etc/koha-httpd.conf
@@ -39,6 +39,15 @@
    ProxyPassReverse /api/v1/  http://localhost:8081/api/v1/
    ##REVERSE PROXYING OK
 
+# Uncomment the following block to restrict access for changing
+# message status via reports to only from certain IPs.
+#   <LocationMatch "/api/v1/messages/\d+/report">
+#      Order Deny,Allow
+#      Deny from all
+#      Allow from 101.123.213.10
+#      Allow from 101.123.213.11
+#   </LocationMatch>
+
    <Directory "__OPAC_WWW_DIR__">
       Options -Indexes
    </Directory>
@@ -167,6 +176,15 @@
    ProxyPass        /api/v1/  http://localhost:8081/api/v1/ keepalive=On
    ProxyPassReverse /api/v1/  http://localhost:8081/api/v1/
    ##REVERSE PROXYING OK
+
+# Uncomment the following block to restrict access for changing
+# message status via reports to only from certain IPs.
+#   <LocationMatch "/api/v1/messages/\d+/report">
+#      Order Deny,Allow
+#      Deny from all
+#      Allow from 101.123.213.10
+#      Allow from 101.123.213.11
+#   </LocationMatch>
 
    <Directory "__INTRANET_WWW_DIR__">
       Options -Indexes
