--- a/etc/koha-httpd.conf
+++ b/etc/koha-httpd.conf
@@ -47,6 +47,11 @@
 #      Allow from 101.123.213.10
 #      Allow from 101.123.213.11
 #   </LocationMatch>
+#   <LocationMatch "/api/v1/pos/cpu/\d+/report">
+#      Order Deny,Allow
+#      Deny from all
+#      Allow from 10.1.62.83
+#   </LocationMatch>
 
    <Directory "__OPAC_WWW_DIR__">
       Options -Indexes
