Bug 13799 - REST API - Introducing a splitted Swagger-spec with 100% critical path test coverage
Our massive Swagger2-spec was split to several smaller files and a lot
of validation errors were fixed using minifySwagger.pl.

INSTALLATION:

-Note the changes in the Apache2 reverse proxying.
-swagger.json is moved to swagger/swagger.min.json and the minified version is
 created using the minifySwagger.pl -script.
-DO NOT add swagger/swagger.min.js to version control since it is impossible to maintain.
 Instead just rebuild it, or use the non-minified version swagger/swagger.json  if the
 API consumer understands JSON-schema references.
-Run REST API test runner with perl t/db_dependent/Api/V1/testREST.pl against the default DB
 WARNING these tests are destructive!

--- a/etc/koha-httpd.conf
+++ b/etc/koha-httpd.conf
@@ -28,13 +28,12 @@
    # SetEnv OVERRIDE_SYSPREF_PrefName Value
 
    ##REVERSE PROXY REQUESTS TO THE KOHA API DAEMON
-   Alias /api/v1/doc __INTRANET_CGI_DIR__/api/v1/doc
-   Alias /api/v1/swagger.json "__INTRANET_CGI_DIR__/api/v1/swagger.json"
+   Alias /api/v1 __INTRANET_CGI_DIR__/api/v1
 
    ProxyRequests Off #Disable anonymous forward proxying
    ProxyPreserveHost On
    ProxyPass        /api/v1/doc !
-   ProxyPass        /api/v1/swagger.json !
+   ProxyPass        /api/v1/swagger !
    ProxyPass        /api/v1/  http://localhost:8081/api/v1/ keepalive=On
    ProxyPassReverse /api/v1/  http://localhost:8081/api/v1/
    ##REVERSE PROXYING OK
@@ -171,13 +170,12 @@
    ErrorDocument 500 /cgi-bin/koha/errors/500.pl
 
    ##REVERSE PROXY REQUESTS TO THE KOHA API DAEMON
-   Alias /api/v1/doc __INTRANET_CGI_DIR__/api/v1/doc
-   Alias /api/v1/swagger.json "__INTRANET_CGI_DIR__/api/v1/swagger.json"
+   Alias /api/v1 __INTRANET_CGI_DIR__/api/v1
 
    ProxyRequests Off #Disable anonymous forward proxying
    ProxyPreserveHost On
    ProxyPass        /api/v1/doc !
-   ProxyPass        /api/v1/swagger.json !
+   ProxyPass        /api/v1/swagger !
    ProxyPass        /api/v1/  http://localhost:8081/api/v1/ keepalive=On
    ProxyPassReverse /api/v1/  http://localhost:8081/api/v1/
    ##REVERSE PROXYING OK
