Bug 13799 - REST API - Introducing a splitted Swagger-spec. squashable

--- a/etc/koha-httpd.conf
+++ b/etc/koha-httpd.conf
@@ -28,12 +28,14 @@
    # SetEnv OVERRIDE_SYSPREF_PrefName Value
 
    ##REVERSE PROXY REQUESTS TO THE KOHA API DAEMON
+   Options +FollowSymLinks                            #Allow linking to swagger-ui
    Alias /api/v1 __INTRANET_CGI_DIR__/api/v1
 
    ProxyRequests Off #Disable anonymous forward proxying
    ProxyPreserveHost On
    ProxyPass        /api/v1/doc !
    ProxyPass        /api/v1/swagger !
+   ProxyPass        /api/v1/auth_examples !           #Show API-authentication examples on different languages
    ProxyPass        /api/v1/  http://localhost:8081/api/v1/ keepalive=On
    ProxyPassReverse /api/v1/  http://localhost:8081/api/v1/
    ##REVERSE PROXYING OK
@@ -170,12 +172,14 @@
    ErrorDocument 500 /cgi-bin/koha/errors/500.pl
 
    ##REVERSE PROXY REQUESTS TO THE KOHA API DAEMON
+   Options +FollowSymLinks                            #Allow linking to swagger-ui
    Alias /api/v1 __INTRANET_CGI_DIR__/api/v1
 
    ProxyRequests Off #Disable anonymous forward proxying
    ProxyPreserveHost On
    ProxyPass        /api/v1/doc !
    ProxyPass        /api/v1/swagger !
+   ProxyPass        /api/v1/auth_examples !           #Show API-authentication examples on different languages
    ProxyPass        /api/v1/  http://localhost:8081/api/v1/ keepalive=On
    ProxyPassReverse /api/v1/  http://localhost:8081/api/v1/
    ##REVERSE PROXYING OK
