--- a/etc/log4perl.conf
+++ b/etc/log4perl.conf
@@ -11,3 +11,10 @@ log4perl.appender.OPAC.filename=__LOG_DIR__/opac.log
 log4perl.appender.OPAC.mode=append
 log4perl.appender.OPAC.layout=PatternLayout
 log4perl.appender.OPAC.layout.ConversionPattern=[%d] [%p] %m %l %n
+
+log4perl.logger.commandline = WARN, CLI
+log4perl.appender.CLI=Log::Log4perl::Appender::File
+log4perl.appender.CLI.filename=__LOG_DIR__/cli.log
+log4perl.appender.CLI.mode=append
+log4perl.appender.CLI.layout=PatternLayout
+log4perl.appender.CLI.layout.ConversionPattern=[%d] [%p] %m %l %n
