KD#1076, KD#636, KD#377 - Online payments & POS integration
Interface type of implementation for online payments and POS integration.

This patch refactors online payments & POS integration in order to support
easier extension for other payment APIs. Removes all CPU-specific hard coded
stuff, and replaces CPU-specific system preferences with two new system preferences,
"OnlinePayments" and "POSIntegration".

System preferences:
"OnlinePayments" and "POSIntegration" are the two system preferences to control
the payment methods. They contain a YAML-configuration, that does two things.
First of all, you can choose which branch uses which payment interface. You can
use "Default" parameter to target all branches. "OnlinePaymentsInterface" and
"POSInterface" defines the interface that will be used in that branch. If you
don't want to enable payments in some branch, you can use value "disabled" in
the interface setting.
The system preferences also control the product code mappins as before this patch
E.g. system preference "POSIntegration"
BranchOne:
  POSInterface: disabled
BranchTwo:
  POSInterface: CPU
  HE: 5150
  Default: 5100
Default:
  POSInterface: PayPal
  F: code01
  FU: code02
  Default: code03
E.g. system preference "OnlinePayments"
Default:
  OnlinePaymentsInterface: PayPal
  F: code01
  FU: code02
  Default: code03

Template files:
Each interface can use customized template files. Online payments use
opac-paycollect.tt and POS integration paycollect.tt. Online payments is for the
sake of customized messages, but POS integration includes also control custom
input fields (for example selecting an Office). The include files are loaded in
includes/payment/<YourPaymentInterface>.inc where <YourPaymentInterface> matches
the interface you defined in "OnlinePayments"/"POSIntegration" system preference
at the interface definition.

REST API endpoints:
This patch separates REST API notification endpoint for online payments and
POS integration into their own endpoints a

--- a/etc/log4perl.conf
+++ b/etc/log4perl.conf
@@ -27,3 +27,28 @@ log4perl.appender.CLI.recreate=true
 log4perl.appender.CLI.mode=append
 log4perl.appender.CLI.layout=PatternLayout
 log4perl.appender.CLI.layout.ConversionPattern=[%d] [%p] %m %l %n
+
+log4perl.logger.opac.Koha.Payment.Online.CPU.send_payment=INFO, CPUONLINE
+log4perl.logger.intranet.Koha.Payment.POS.CPU.send_payment=INFO, CPUPOS
+log4perl.logger.intranet.Koha.REST.V1.Payments.Online.CPU.Reports.cpu_report=INFO, CPUONLINE
+log4perl.logger.intranet.Koha.REST.V1.Payments.Pos.CPU.Reports.cpu_report=INFO, CPUPOS
+log4perl.additivity.opac.Koha.Payment.Online.CPU.send_payment=0
+log4perl.additivity.intranet.Koha.Payment.POS.CPU.send_payment=0
+log4perl.additivity.intranet.Koha.REST.V1.Payments.Online.CPU.Reports.cpu_report=0
+log4perl.additivity.intranet.Koha.REST.V1.Payments.Pos.CPU.Reports.cpu_report=0
+log4perl.appender.CPUONLINE=Log::Log4perl::Appender::File
+log4perl.appender.CPUONLINE.filename=__LOG_DIR__/cpu_online_payments.log
+log4perl.appender.CPUONLINE.create_at_logtime=true
+log4perl.appender.CPUONLINE.syswrite=true
+log4perl.appender.CPUONLINE.recreate=true
+log4perl.appender.CPUONLINE.mode=append
+log4perl.appender.CPUONLINE.layout=PatternLayout
+log4perl.appender.CPUONLINE.layout.ConversionPattern=[%d] [%p] %m %l %n
+log4perl.appender.CPUPOS=Log::Log4perl::Appender::File
+log4perl.appender.CPUPOS.filename=__LOG_DIR_/cpu_pos.log
+log4perl.appender.CPUPOS.create_at_logtime=true
+log4perl.appender.CPUPOS.syswrite=true
+log4perl.appender.CPUPOS.recreate=true
+log4perl.appender.CPUPOS.mode=append
+log4perl.appender.CPUPOS.layout=PatternLayout
+log4perl.appender.CPUPOS.layout.ConversionPattern=[%d] [%p] %m %l %n
