--- a/etc/log4perl.conf
+++ b/etc/log4perl.conf
@@ -30,12 +30,12 @@ log4perl.appender.CLI.layout.ConversionPattern=[%d] [%p] %m %l %n
 
 log4perl.logger.opac.Koha.Payment.Online.CPU.send_payment=INFO, CPUONLINE
 log4perl.logger.intranet.Koha.Payment.POS.CPU.send_payment=INFO, CPUPOS
-log4perl.logger.intranet.Koha.REST.V1.Payments.Online.CPU.Reports.cpu_report=INFO, CPUONLINE
-log4perl.logger.intranet.Koha.REST.V1.Payments.Pos.CPU.Reports.cpu_report=INFO, CPUPOS
+log4perl.logger.intranet.Koha.REST.V1.Payments.Online.CPU.Reports.cpu_online_report=INFO, CPUONLINE
+log4perl.logger.intranet.Koha.REST.V1.Payments.Pos.CPU.Reports.cpu_pos_report=INFO, CPUPOS
 log4perl.additivity.opac.Koha.Payment.Online.CPU.send_payment=0
 log4perl.additivity.intranet.Koha.Payment.POS.CPU.send_payment=0
-log4perl.additivity.intranet.Koha.REST.V1.Payments.Online.CPU.Reports.cpu_report=0
-log4perl.additivity.intranet.Koha.REST.V1.Payments.Pos.CPU.Reports.cpu_report=0
+log4perl.additivity.intranet.Koha.REST.V1.Payments.Online.CPU.Reports.cpu_online_report=0
+log4perl.additivity.intranet.Koha.REST.V1.Payments.Pos.CPU.Reports.cpu_pos_report=0
 log4perl.appender.CPUONLINE=Log::Log4perl::Appender::File
 log4perl.appender.CPUONLINE.filename=__LOG_DIR__/cpu_online_payments.log
 log4perl.appender.CPUONLINE.create_at_logtime=true
