--- a/etc/log4perl.conf
+++ b/etc/log4perl.conf
@@ -28,6 +28,16 @@ log4perl.appender.CLI.mode=append
 log4perl.appender.CLI.layout=PatternLayout
 log4perl.appender.CLI.layout.ConversionPattern=[%d] [%p] %m %l %n
 
+log4perl.logger.rest = WARN, REST
+log4perl.appender.REST=Log::Log4perl::Appender::File
+log4perl.appender.REST.filename=__LOG_DIR__/rest.log
+log4perl.appender.REST.create_at_logtime=true
+log4perl.appender.REST.syswrite=true
+log4perl.appender.REST.recreate=true
+log4perl.appender.REST.mode=append
+log4perl.appender.REST.layout=PatternLayout
+log4perl.appender.REST.layout.ConversionPattern=[%d] [%p] %m %l %n
+
 log4perl.logger.opac.Koha.Payment.Online.CPU.send_payment=INFO, CPUONLINE
 log4perl.logger.intranet.Koha.Payment.POS.CPU.send_payment=INFO, CPUPOS
 log4perl.logger.intranet.Koha.REST.V1.Payments.Online.CPU.Reports.cpu_online_report=INFO, CPUONLINE
