Bug 16509 - Koha::Logger - utf8 support.
No more wide characters in print when logging to a file with Koha::Logger.

Test with this string

"♯Turpo :"

--- a/etc/log4perl.conf
+++ b/etc/log4perl.conf
@@ -7,6 +7,7 @@ log4perl.appender.INTRANET.recreate=true
 log4perl.appender.INTRANET.mode=append
 log4perl.appender.INTRANET.layout=PatternLayout
 log4perl.appender.INTRANET.layout.ConversionPattern=[%d] [%p] %m %l %n
+log4perl.appender.INTRANET.utf8=1
 
 log4perl.logger.opac = WARN, OPAC
 log4perl.appender.OPAC=Log::Log4perl::Appender::File
@@ -17,6 +18,7 @@ log4perl.appender.OPAC.recreate=true
 log4perl.appender.OPAC.mode=append
 log4perl.appender.OPAC.layout=PatternLayout
 log4perl.appender.OPAC.layout.ConversionPattern=[%d] [%p] %m %l %n
+log4perl.appender.OPAC.utf8=1
 
 log4perl.logger.commandline = WARN, CLI
 log4perl.appender.CLI=Log::Log4perl::Appender::File
@@ -27,6 +29,7 @@ log4perl.appender.CLI.recreate=true
 log4perl.appender.CLI.mode=append
 log4perl.appender.CLI.layout=PatternLayout
 log4perl.appender.CLI.layout.ConversionPattern=[%d] [%p] %m %l %n
+log4perl.appender.CLI.utf8=1
 
 log4perl.logger.rest = WARN, REST
 log4perl.appender.REST=Log::Log4perl::Appender::File
@@ -37,6 +40,7 @@ log4perl.appender.REST.recreate=true
 log4perl.appender.REST.mode=append
 log4perl.appender.REST.layout=PatternLayout
 log4perl.appender.REST.layout.ConversionPattern=[%d] [%p] %m %l %n
+log4perl.appender.REST.utf8=1
 
 log4perl.logger.opac.Koha.Payment.Online.CPU.send_payment=INFO, CPUONLINE
 log4perl.logger.intranet.Koha.Payment.POS.CPU.send_payment=INFO, CPUPOS
@@ -54,6 +58,7 @@ log4perl.appender.CPUONLINE.recreate=true
 log4perl.appender.CPUONLINE.mode=append
 log4perl.appender.CPUONLINE.layout=PatternLayout
 log4perl.appender.CPUONLINE.layout.ConversionPattern=[%d] [%p] %m %l %n
+log4perl.appender.CPUONLINE.utf8=1
 log4perl.appender.CPUPOS=Log::Log4perl::Appender::File
 log4perl.appender.CPUPOS.filename=__LOG_DIR_/cpu_pos.log
 log4perl.appender.CPUPOS.create_at_logtime=true
@@ -62,3 +67,4 @@ log4perl.appender.CPUPOS.recreate=true
 log4perl.appender.CPUPOS.mode=append
 log4perl.appender.CPUPOS.layout=PatternLayout
 log4perl.appender.CPUPOS.layout.ConversionPattern=[%d] [%p] %m %l %n
+log4perl.appender.CPUPOS.utf8=1
