KD#1474 Changes to dumping and script behaviour
1) Dump schema, data and stats separately
2) Keeping files by their date is removed (unneeded, just set the amount of dumps to keep)
3) The dumps will now always be compressed with gzip (there really is no reason not to).

--- a/misc/cronjobs/dailydump.conf
+++ b/misc/cronjobs/dailydump.conf
@@ -9,7 +9,8 @@ databasepasswd="Whateveritis"
 databasename="koha"
 dumpdir="/var/dumps/daily"
 
-keepdays=7
-keepnumber=7
+getschema=1
+getdata=1
+getextra=1
 
-compressdumps="yes"
+keepnumber=7
