--- a/misc/cronjobs/hourlydump.conf
+++ b/misc/cronjobs/hourlydump.conf
@@ -4,12 +4,13 @@
 # chown root:root [thisfile] && chmod go-a [thisfile]
 
 databaseuser="koha"
-databasepasswd="Whateveritis"
+databasepasswd="whateveritis"
 
 databasename="koha"
 dumpdir="/var/dumps/hourly"
 
-keepdays=1
-keepnumber=1
+getschema=0
+getdata=1
+getextra=0
 
-compressdumps="no"
+keepnumber=12
