--- a/etc/koha-httpd.conf
+++ b/etc/koha-httpd.conf
@@ -42,17 +42,22 @@
 
 # Uncomment the following block to restrict access for changing
 # message status via reports to only from certain IPs.
-#   <LocationMatch "/api/v1/messages/\d+/report">
-#      Order Deny,Allow
-#      Deny from all
-#      Allow from 101.123.213.10
-#      Allow from 101.123.213.11
-#   </LocationMatch>
-#   <LocationMatch "/api/v1/pos/cpu/\d+/report">
-#      Order Deny,Allow
-#      Deny from all
-#      Allow from 10.1.62.83
-#   </LocationMatch>
+   <LocationMatch "/api/v1/messages/\d+/report">
+      Order Deny,Allow
+      Deny from all
+      Allow from 83.145.230.90
+      Allow from 81.19.118.90
+   </LocationMatch>
+   <LocationMatch "/api/v1/payments/pos/cpu/\d+/report">
+      Order Deny,Allow
+      Deny from all
+      Allow from 10.1.62.83
+   </LocationMatch>
+   <LocationMatch "/api/v1/payments/online/cpu/\d+/report">
+      Order Deny,Allow
+      Deny from all
+      Allow from 10.1.62.83
+   </LocationMatch>
 
    <Directory "__OPAC_WWW_DIR__">
       Options -Indexes
@@ -186,12 +191,22 @@
 
 # Uncomment the following block to restrict access for changing
 # message status via reports to only from certain IPs.
-#   <LocationMatch "/api/v1/messages/\d+/report">
-#      Order Deny,Allow
-#      Deny from all
-#      Allow from 101.123.213.10
-#      Allow from 101.123.213.11
-#   </LocationMatch>
+    <LocationMatch "/api/v1/messages/\d+/report">
+      Order Deny,Allow
+      Deny from all
+      Allow from 83.145.230.90
+      Allow from 81.19.118.90
+    </LocationMatch>
+    <LocationMatch "/api/v1/payments/pos/cpu/\d+/report">
+      Order Deny,Allow
+      Deny from all
+      Allow from 10.1.62.83
+   </LocationMatch>
+   <LocationMatch "/api/v1/payments/online/cpu/\d+/report">
+      Order Deny,Allow
+      Deny from all
+      Allow from 10.1.62.83
+   </LocationMatch>
 
    <Directory "__INTRANET_WWW_DIR__">
       Options -Indexes
